Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40152

windeployqt fails when trying to setup QtQuick.Controls from a read-only Qt

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.3.2
    • 5.3.1
    • None
    • Windows 7
    • qttools: a7d5e67556bd32496ce0a0f98a5ee225e00977e0 (5.3 branch,10.7.2014, 5.3.2)

      If the Qt files are read-only, windeployqt will fail with the error "Cannot remove empty directory Z:\work\test-deploy\QtQuick\Controls\Private." After copying files, windeployqt tries to remove some of them, but can't because they are read-only.

      The problem is similar to QTBUG-23454 where macdeployqt was not ensuring copied files were writable. A similar fix should probably be applied here. When the files are copied, they should be made writable.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            baysmith Bradley Smith
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes