windeployqt: Clear read-only attribute when copying files.

The deletion of the empty QML directories fails when not doing so.

Task-number: QTBUG-40152
Change-Id: I0ff78440646239897b4867c3b3cfe1af8b2769f9
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>